# Raytracer

./: CMakeLists.txt  README.md  main.cpp
images/: Projectile.ppm
src/: Color.h  Environment.h  Projectile.h  RTuple.h  main.cpp
src/Graphics/: Canvas.cpp  Canvas.h  PPM.cpp  PPM.h
src/Primaries/: Color.cpp  Color.h  RTuple.cpp  RTuple.h
src/Projectile/: Environment.cpp  Environment.h  Projectile.cpp  Projectile.h
test/: CMakeLists.txt  CanvasTest.cpp  ColorTest.cpp  RPointTest.cpp  RTupleTest.cpp  RVectorTest.cpp
test/Graphics/: CanvasTest.cpp  PPMTest.cpp
test/Primaries/: ColorTest.cpp  RPointTest.cpp  RVectorTest.cpp
